<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FpTestTool</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_case_result">(N/A)</string>
    <string name="case_pass">PASS</string>
    <string name="case_fail">FAIL</string>
    <string name="case_checking">Checking</string>
    <string name="case_bus_case_name">SPI Bus</string>
    <string name="case_bus_case_description">test spi bus connected or not.</string>
    <string name="case_sensor_case_name">Sensor Bus</string>
    <string name="case_sensor_case_description">Capture data and check data is valid.</string>
    <string name="case_scene_case_name">Scene</string>
    <string name="case_scene_case_description">Enroll and Verify</string>
    <string name="case_self_case_name">Self-checking</string>
    <string name="case_self_case_description">Some sersor check case</string>
    <string name="case_name">case name</string>
    <string name="case_check">Check</string>
    <string name="case_back">Back</string>
    <string name="case_reason_cannot_readdata">Can not read data from sensor</string>
    <string name="case_reason_sensor_timeout">Sensor time out.</string>
    <string name="luncher_start">Start Activity</string>
    <string name="luncher_no_result">No result</string>
    <string name="case_badpoint_case_name">Dadpoint Test</string>
    <string name="case_badpoint_case_description">Badpoint number compared to 25.</string>
    <string name="case_moduletime_case_name">Module Time</string>
    <string name="case_moduletime_case_description">Get Module time.</string>
    <string name="case_module_case_name">Module Test</string>
    <string name="case_module_case_description">Check Module is ok.</string>
    <string name="time_spend">Time: %1$s ms</string>
    <string name="time_module">%1$s/%2$s/%3$s</string>

    <string name="case_no_test">test result</string>
    <!--hejianfeng add start-->
	<string name="GFx16">GFx16</string>
	<string name="GFx18">GFx18</string>
	<string name="GFx16M">GFx16M</string>
	<string name="GFx18M">GFx18M</string>
	<string name="GF816IFS">GF816IFS</string>
	<!--hejianfeng add end-->
    
    <!-- new test case string -->
    <string name="fp_self_case_name">SPI Bus</string>
    <string name="fp_self_case_detail">test spi bus connected or not.</string>
    <string name="fp_finger_down_case_name">Finger print test</string>
    <string name="fp_finger_down_case_detail">test sensor status of finger print case.</string>
    <string name="fp_quality_case_name">Fingerprint image quality</string>
    <string name="fp_quality_case_detail">check fingerprint image quality.</string>
    <string name="fp_performance_case_name">Performance</string>
    <string name="fp_performance_case_detail">check fingerprint performance</string>
    <string name="fp_scence_case_name">Fingerprint scence</string>
    <string name="fp_scence_case_detail">check fingerprint register and recognition.</string>
    <string name="fp_finger_up_case_name">Finger up test</string>
    <string name="fp_finger_up_case_detail">test sensor status of finger up case.</string>
    
    <!-- test dialog string -->
    <string name="fp_finger_down_case_message">....Please place your finger on the sensor....</string>
    <string name="fp_finger_up_case_message">....Please release your finger from the sensor....</string>
    <string name="title_activity_start">FpTestTool</string>

    <!--XYF: notice message-->
    <string name="comfirm_message">Confirm</string>
    <string name="notice_select_message">Specific model selection can not be empty, please reselect</string>
    <string name="notice_cannotback_message">Test is running in a crucial moment, do not exit now</string>

</resources>
